Web Inspector: increase the auto-inspect debugger timeout delay to account for slower networks/devices https://bugs.webkit.org/show_bug.cgi?id=209940 <rdar://problem/61120919>

Reviewed by Joseph Pecoraro.

* inspector/remote/cocoa/RemoteInspectorCocoa.mm:
(Inspector::RemoteInspector::updateAutomaticInspectionCandidate):


Canonical link: https://commits.webkit.org/222897@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@259479 268f45cc-cd09-0410-ab3c-d52691b4dbfc